crates/hwp-viewer/tests/snapshots/snapshot_test__snapshot_selfintroduce.snap
---
source: crates/hwp-viewer/tests/snapshot_test.rs
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<title>나를 소개 합니다</title>
<style>

body { margin: 0; padding: 20px; background: #eee; font-family: 'Malgun Gothic', '맑은 고딕', sans-serif; }
.hwp-section { background: #fff; margin: 0 auto 20px; box-shadow: 0 0 5px rgba(0,0,0,0.2); box-sizing: border-box; }
p { margin: 0; min-height: 1em; word-wrap: break-word; }
.hwp-table { border-collapse: collapse; }
.hwp-table td { border: 1px solid #000; padding: 2px 5px; vertical-align: top; }
.hwp-image { display: inline-block; }
.hwp-shape { position: relative; }
.hwp-header, .hwp-footer { color: #666; font-size: 0.9em; border-bottom: 1px solid #ccc; padding-bottom: 4px; margin-bottom: 8px; }
.hwp-footer { border-bottom: none; border-top: 1px solid #ccc; padding-top: 4px; margin-top: 8px; }
.hwp-footnote-ref { vertical-align: super; font-size: 0.8em; color: #0066cc; }
.hwp-footnote-body { font-size: 0.9em; border-top: 1px solid #ccc; padding-top: 4px; margin-top: 8px; }
.cs0 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '함초롬바탕'; }
.cs1 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '함초롬돋움'; }
.cs2 { font-size: 9pt; color: #000000; background-color: #ffffff; font-family: '함초롬돋움'; }
.cs3 { font-size: 9pt; color: #000000; background-color: #ffffff; font-family: '함초롬바탕'; }
.cs4 { font-size: 9pt; color: #000000; background-color: #ffffff; letter-spacing: -0.05em; font-family: '함초롬돋움'; }
.cs5 { font-size: 16pt; color: #000000; background-color: #ffffff; font-family: '맑은 고딕'; }
.cs6 { font-size: 16pt; color: #000000; background-color: #00d7ff; font-family: '맑은 고딕'; }
.cs7 { font-size: 16pt; color: #000000; background-color: #ffffff; letter-spacing: -0.07em; font-family: '맑은 고딕'; }
.cs8 { font-size: 16pt; color: #000000; background-color: #ffffff; letter-spacing: -0.07em; font-family: '맑은 고딕'; }
.cs9 { font-size: 16pt; color: #000000; background-color: #ffffff; font-family: '맑은 고딕'; }
.ps0 { text-align: justify; text-indent: -9.24mm; line-height: 130%; }
.ps1 { text-align: justify; line-height: 160%; }
.ps2 { text-align: justify; margin-left: 7.06mm; line-height: 160%; }
.ps3 { text-align: justify; margin-left: 14.11mm; line-height: 160%; }
.ps4 { text-align: justify; margin-left: 21.17mm; line-height: 160%; }
.ps5 { text-align: justify; margin-left: 28.22mm; line-height: 160%; }
.ps6 { text-align: justify; margin-left: 35.28mm; line-height: 160%; }
.ps7 { text-align: justify; margin-left: 42.33mm; line-height: 160%; }
.ps8 { text-align: justify; margin-left: 49.39mm; line-height: 160%; }
.ps9 { text-align: justify; margin-left: 10.58mm; line-height: 160%; }
.ps10 { text-align: justify; line-height: 150%; }
.ps11 { text-align: justify; line-height: 130%; }
.ps12 { text-align: justify; line-height: 160%; }
.ps13 { text-align: center; line-height: 160%; }
.ps14 { text-align: justify; line-height: 180%; }
</style>
</head>
<body>
<div class="hwp-section" style="width:210mm;padding:20mm 30mm 15mm 30mm;">
<p class="ps13">
<span class="cs9">나를 소개 합니다</span></p>
<p class="ps12">
<br></p>
<p class="ps14">
<span class="cs5">①</span><span class="cs6">이름</span><span class="cs5">:</span></p>
<p class="ps14">
<span class="cs5">혈액형 : O형</span></p>
<p class="ps14">
<span class="cs5">성격 : 자유로운 영혼</span></p>
<p class="ps14">
<span class="cs5">좌우명 : A sound mind in a sound body.</span></p>
<p class="ps14">
<span class="cs5">소개하는 글</span></p>
<p class="ps14">
<span class="cs7">어린 시절은 변두리 작은 동네에서 꿈 많은 소녀로 자라났습니다. 할머니, 할아버지, 삼촌들까지 대가족 속에서 막내로 귀여움을 받으면서 살았습니다. 가족들은 저에게</span><span class="cs8">微笑天使</span><span class="cs7">라고 부르곤 했습니다. 가족들의 사랑 덕분에 잘 자라날 수 있었습니다.</span></p>
<p class="ps14">
<span class="cs7">현재 저는 사랑하는 아이들과 남편과 함께</span><span class="cs8">행복</span><span class="cs7">(幸福)한 삶을 살아가고 있습니다. 앞으로의 꿈은 아이들이 결혼하고 나면 남편과 시골에서 조그마한 텃밭을 가꾸면서 살아가는 것입니다. 그 꿈을 실현할 수 있기를 바랍니다.</span></p>
</div>
</body>
</html>
